--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,10 @@
     "paper-button": "PolymerElements/paper-button#^1.0.12",
     "iron-data-table": "1.0.0",
     "oc-iron-data-table-styles": "git://github.com/oc-elements/oc-iron-data-table-styles.git#1.x",
-    "oc-paginator": "git://github.com/oc-elements/oc-paginator.git#1.x",
     "oc-grid-controls": "git://github.com/oc-elements/oc-grid-controls#1.x",
-    "paper-material": "PolymerElements/paper-material#^1.0.6"
+    "paper-material": "PolymerElements/paper-material#^1.0.6",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
